# Agentic-Graph

./: README.md  main.py  pyproject.toml
src/: app_conf.py
src/controller/: routes.py
src/data/: ollama_openai_prompt.py
src/graph/: graph.py  graph_with_mcp.py
src/language_agents/: ollama_openai.py
src/nodes/: api_tool.py  db_tool.py  email_tool.py  llm_ollama.py  mcp_tool.py  push_notification.py
src/nodes/mcp/: mcp_client.py  mcp_manager.py  mcp_registry.py
src/router/: routes.py
src/state/: state.py
