[project]
name = "agentic-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.10",
    "langgraph>=0.6.8",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
